<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ResultActivity">

    <LinearLayout
        android:id="@+id/layoutCardBMI"
        android:layout_width="320dp"
        android:layout_height="150dp"
        android:layout_margin="24dp"
        android:background="@drawable/banner_card"
        android:elevation="16dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tvTitle"
            style="@style/CardResult"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/result_subtitle_bmi"
            android:textSize="32sp" />

        <TextView
            android:id="@+id/tvResult"
            style="@style/CardResult"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:maxLength="5"
            android:textSize="24sp"
            tools:text="24.25" />

        <TextView
            android:id="@+id/tvResultClassification"
            style="@style/CardResult"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="16dp"
            android:textSize="16sp"
            tools:text="NORMAL" />
    </LinearLayout>

    <TextView
        android:id="@+id/tvClassification"
        style="@style/TextViewDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/result_classification"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layoutCardBMI" />

    <LinearLayout
        android:id="@+id/layoutCardClassification"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_margin="24dp"
        android:background="@drawable/classification_card"
        android:elevation="8dp"
        android:orientation="vertical"
        android:padding="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvClassification">

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <TextView
                style="@style/CardClassificationDescription"
                android:layout_weight="1"
                android:text="@string/res_title_classification_one" />

            <TextView
                style="@style/CardClassificationResult"
                android:layout_weight="1"
                android:text="@string/res_classification_one" />
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <TextView
                style="@style/CardClassificationDescription"
                android:layout_weight="1"
                android:text="@string/res_title_classification_two" />

            <TextView
                style="@style/CardClassificationResult"
                android:layout_weight="1"
                android:text="@string/res_classification_two" />
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <TextView
                style="@style/CardClassificationDescription"
                android:layout_weight="1"
                android:text="@string/res_title_classification_three" />

            <TextView
                style="@style/CardClassificationResult"
                android:layout_weight="1"
                android:text="@string/res_classification_three" />
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <TextView
                style="@style/CardClassificationDescription"
                android:layout_weight="1"
                android:text="@string/res_title_classification_four" />

            <TextView
                style="@style/CardClassificationResult"
                android:layout_weight="1"
                android:text="@string/res_classification_four" />
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <TextView
                style="@style/CardClassificationDescription"
                android:layout_weight="1"
                android:text="@string/res_title_classification_five" />

            <TextView
                style="@style/CardClassificationResult"
                android:layout_weight="1"
                android:text="@string/res_classification_five" />
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <TextView
                style="@style/CardClassificationDescription"
                android:layout_weight="1"
                android:text="@string/res_title_classification_six" />

            <TextView
                style="@style/CardClassificationResult"
                android:layout_weight="1"
                android:text="@string/res_classification_six" />
        </TableRow>
    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnRecalculate"
        style="@style/Button"
        android:layout_width="320dp"
        android:layout_height="48dp"
        android:background="@drawable/banner_card"
        android:text="@string/result_recalculate"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>