<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imgForm"
        android:layout_width="240dp"
        android:layout_height="240dp"
        android:layout_marginTop="40dp"
        android:contentDescription="@null"
        android:src="@drawable/quiz"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvSubtitle"
        style="@style/TextViewDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_subtitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgForm" />

    <EditText
        android:id="@+id/edtWeight"
        style="@style/EditText"
        android:layout_width="320dp"
        android:layout_height="48dp"
        android:layout_marginTop="24dp"
        android:autofillHints="Weight"
        android:background="@drawable/textbox_rounded"
        android:drawableStart="@drawable/ic_weight"
        android:hint="@string/main_weight"
        android:inputType="numberDecimal"
        android:maxLength="6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvSubtitle" />

    <EditText
        android:id="@+id/edtHeight"
        style="@style/EditText"
        android:layout_width="320dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:autofillHints="Height"
        android:background="@drawable/textbox_rounded"
        android:drawableStart="@drawable/ic_height"
        android:hint="@string/main_height"
        android:inputType="numberDecimal"
        android:maxLength="4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtWeight" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnReset"
        style="@style/Button"
        android:layout_width="180dp"
        android:layout_height="48dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/banner_card"
        android:text="@string/main_reset"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtHeight" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnCalculate"
        style="@style/Button"
        android:layout_width="320dp"
        android:layout_height="48dp"
        android:background="@drawable/button_gradient"
        android:text="@string/main_calculate"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>